fixed the error with the second navbar covering the first one

--- a/public/style.css
+++ b/public/style.css
@@ -12,10 +12,10 @@ body{
 }
 /* Styles for navbar */
 
-/* .navbar-container {
+.navbar-container {
     background-color: #333;
     overflow: hidden;
-} */
+}
 
 .topnav {
     background-color: #333;
@@ -100,7 +100,7 @@ Meant to make navbar options 'disappear' and make (burger) icon appear */
   background-color: black;
   color: white;
   position: fixed;
-  top: 0px;
+  top: -6vh;
   opacity: 0;
   z-index: 2;
   transition: all .3s ease;
@@ -108,6 +108,7 @@ Meant to make navbar options 'disappear' and make (burger) icon appear */
 .navbar-visible{
   opacity: 1;
   transition: all .5s ease;
+  top: 0vh;
 }
 .navbar-further-down-list{
   display: flex;
